--- a/etc/local_grapl/nginx.conf
+++ b/etc/local_grapl/nginx.conf
@@ -12,35 +12,35 @@ http {
         listen 3128;
 
         location /auth/ {
-            proxy_pass http://auth.grapl.dev:8900$uri;
+            proxy_pass http://auth.grapl.test:8900$uri;
         }
 
         location /prod/auth/ {
-            proxy_pass http://auth.grapl.dev:8900$uri;
+            proxy_pass http://auth.grapl.test:8900$uri;
         }
 
         location /graphQlEndpoint/ {
-            proxy_pass http://graphql.grapl.dev:5000/graphQlEndpoint/;
+            proxy_pass http://graphql.grapl.test:5000/graphQlEndpoint/;
         }
 
         location /prod/graphQlEndpoint/ {
-            proxy_pass http://graphql.grapl.dev:5000/graphQlEndpoint/;
+            proxy_pass http://graphql.grapl.test:5000/graphQlEndpoint/;
         }
 
         location /modelPluginDeployer/ {
-            proxy_pass http://model-plugin-deployer.grapl.dev:8123$uri;
+            proxy_pass http://model-plugin-deployer.grapl.test:8123$uri;
         }
 
         location /prod/modelPluginDeployer/ {
-            proxy_pass http://model-plugin-deployer.grapl.dev:8213$uri;
+            proxy_pass http://model-plugin-deployer.grapl.test:8213$uri;
         }
 
         location /static/ {
-            proxy_pass http://ux-router.grapl.dev:8901$uri;
+            proxy_pass http://ux-router.grapl.test:8901$uri;
         }
 
         location / {
-            proxy_pass http://ux-router.grapl.dev:8901$uri;
+            proxy_pass http://ux-router.grapl.test:8901$uri;
         }
     }
 
