--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 .mypy_cache
+.hypothesis
 
 # Rust outputs
 target/
@@ -34,6 +35,7 @@ dist/
 /tags
 /tags.lock
 /tags.temp
+.log
 
 # Pants-related artifacts
 # https://www.pantsbuild.org/docs/gitignore
