--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -11,17 +11,17 @@
     "@testing-library/user-event": "^7.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react-dom": "^17.0.0",
+    "@types/node": "^12.12.34",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-sidebar": "^3.0.0",
     "@types/yup": "^0.29.3",
-    "d3": "^5.15.1",
     "debug": "^2.6.9",
     "formik": "^2.1.4",
     "gulp": "^4.0.2",
     "history": "^5.0.0",
+    "jest-dom": "^4.0.0",
     "minimist": "^1.2.3",
     "prettier": "2.0.3",
     "react": "^16.13.1",
@@ -30,8 +30,10 @@
     "react-force-graph": "^1.32.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "react-test-render": "^1.1.2",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^4.1.3",
+    "typescript-formatter": "^7.2.2",
     "yup": "^0.29.1"
   },
   "scripts": {
@@ -56,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.1"
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/react": "^16.9.32"
   }
 }
