--- a/etc/local_grapl/nginx_templates/default.conf.template
+++ b/etc/local_grapl/nginx_templates/default.conf.template
@@ -11,11 +11,11 @@ server {
   listen 3128;
 
   location /auth/ {
-    proxy_pass http://${GRAPL_AUTH_HOST}:${GRAPL_AUTH_HOST}$uri;
+    proxy_pass http://${GRAPL_AUTH_HOST}:${GRAPL_AUTH_PORT}$uri;
   }
 
   location /prod/auth/ {
-    proxy_pass http://${GRAPL_AUTH_HOST}:${GRAPL_AUTH_HOST}$uri;
+    proxy_pass http://${GRAPL_AUTH_HOST}:${GRAPL_AUTH_PORT}$uri;
   }
 
   location /graphQlEndpoint/ {
