--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -5,18 +5,20 @@
   "dependencies": {
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.11.3",
     "@stardust-ui/docs-components": "^0.40.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^7.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^24",
     "@types/node": "^12.12.34",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-sidebar": "^3.0.0",
     "@types/yup": "^0.29.3",
+    "clsx": "^1.1.1",
     "debug": "^2.6.9",
     "formik": "^2.1.4",
     "gulp": "^4.0.2",
@@ -32,7 +34,8 @@
     "react-scripts": "3.4.4",
     "react-test-render": "^1.1.2",
     "semantic-ui-react": "^0.88.2",
-    "typescript": "^4.1.3",
+    "three": "^0.125.2",
+    "typescript": "^4.1.5",
     "typescript-formatter": "^7.2.2",
     "yup": "^0.29.1"
   },
