spin up Kafka in compose environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,23 @@ x-common-variables:
     SQS_ACCESS_KEY_ID: "dummy_cred_aws_access_key_id"
     SQS_ACCESS_KEY_SECRET: "dummy_cred_aws_secret_access_key"
     SQS_ENDPOINT: ${SQS_ENDPOINT}
+  zookeeper-env: &zookeeper-env
+    ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_PORT}
+    ZOOKEEPER_TICK_TIME: 2000
+  kafka-broker-env: &kafka-broker-env
+    KAFKA_BROKER_ID: 1
+    KAFKA_ZOOKEEPER_CONNECT: "${ZOOKEEPER_HOST}:${ZOOKEEPER_PORT}"
+    KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+    KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092,PLAINTEXT_HOST://localhost:29092
+    KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
+    KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
+    KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 1
+    KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+    KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    KAFKA_JMX_PORT: ${KAFKA_JMX_PORT}
+    KAFKA_JMX_HOSTNAME: localhost
 
 services:
 
@@ -85,6 +102,26 @@ services:
       default:
         aliases:
           - ${REDIS_HOST}
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:6.1.0
+    environment:
+      <<: *zookeeper-env
+    networks:
+      default:
+        aliases:
+          - ${ZOOKEEPER_HOST}
+
+  kafka-broker:
+    image: confluentinc/cp-server:6.1.0
+    depends_on:
+      - zookeeper
+    environment:
+      <<: *kafka-broker-env
+    networks:
+      default:
+        aliases:
+          - ${KAFKA_BROKER_HOST}
 
   sqs:
     image: localstack/localstack:0.11.5
@@ -607,6 +644,7 @@ services:
         wait-for-it ${DYNAMODB_HOST}:${DYNAMODB_PORT} --timeout=$$TIMEOUT &&
         wait-for-it ${DGRAPH_HOST}:${DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT} --timeout=$$TIMEOUT &&
         wait-for-it ${SECRETSMANAGER_HOST}:${SECRETSMANAGER_PORT} --timeout=$$TIMEOUT &&
+        wait-for-it ${KAFKA_BROKER_HOST}:${KAFKA_BROKER_PORT} --timeout=$$TIMEOUT &&
         . venv/bin/activate &&
         python /home/grapl/grapl_local_provision/provision_local_identity_table.py &&
         python /home/grapl/grapl_local_provision/grapl_provision.py &&
