--- a/local-grapl.env
+++ b/local-grapl.env
@@ -25,6 +25,13 @@ GRAPL_UX_ROUTER_PORT=8901
 # Redis default port
 REDIS_PORT=6379
 
+# Zookeeper port
+ZOOKEEPER_PORT=2181
+
+# Kafka broker ports
+KAFKA_BROKER_PORT=9092
+KAFKA_JMX_PORT=9101
+
 # MinIO default port
 S3_PORT=9000
 
@@ -60,6 +67,8 @@ DGRAPH_HOST=dgraph.grapl.test
 DYNAMODB_HOST=dynamodb.${AWS_REGION}.amazonaws.com
 GRAPL_API_HOST=api.grapl.test
 REDIS_HOST=redis.grapl.test
+ZOOKEEPER_HOST=zookeeper
+KAFKA_BROKER_HOST=kafka-broker
 S3_HOST=s3.${AWS_REGION}.amazonaws.com
 SECRETSMANAGER_HOST=secretsmanager.${AWS_REGION}.amazonaws.com
 SQS_HOST=sqs.${AWS_REGION}.amazonaws.com
