provision kafka topics

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,18 +45,23 @@ x-common-variables:
     ZOOKEEPER_TICK_TIME: 2000
   kafka-broker-env: &kafka-broker-env
     KAFKA_BROKER_ID: 1
-    KAFKA_ZOOKEEPER_CONNECT: "${ZOOKEEPER_HOST}:${ZOOKEEPER_PORT}"
+    KAFKA_ZOOKEEPER_CONNECT: "${ZOOKEEPER_0_HOST}:${ZOOKEEPER_PORT}"
     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-    KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092,PLAINTEXT_HOST://localhost:29092
-    KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
+    KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${KAFKA_BROKER_0_HOST}:9092,PLAINTEXT_HOST://localhost:29092
     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-    KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
-    KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 1
     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     KAFKA_JMX_PORT: ${KAFKA_JMX_PORT}
     KAFKA_JMX_HOSTNAME: localhost
+  identified-predicates-topics-env: &identified-predicates-topics-env
+    IDENTIFIED_PREDICATES_TOPIC: ${IDENTIFIED_PREDICATES_TOPIC}
+    IDENTIFIED_PREDICATES_RETRY_TOPIC: ${IDENTIFIED_PREDICATES_RETRY_TOPIC}
+    IDENTIFIED_PREDICATES_FAILED_TOPIC: ${IDENTIFIED_PREDICATES_FAILED_TOPIC}
+  merged-predicates-topics-env: &merged-predicates-topics-env
+    MERGED_PREDICATES_TOPIC: ${MERGED_PREDICATES_TOPIC}
+    MERGED_PREDICATES_RETRY_TOPIC: ${MERGED_PREDICATES_RETRY_TOPIC}
+    MERGED_PREDICATES_FAILED_TOPIC: ${MERGED_PREDICATES_FAILED_TOPIC}
 
 services:
 
@@ -98,25 +103,25 @@ services:
         aliases:
           - ${REDIS_HOST}
 
-  zookeeper:
+  zookeeper-0:
     image: confluentinc/cp-zookeeper:6.1.0
     environment:
       <<: *zookeeper-env
     networks:
       default:
         aliases:
-          - ${ZOOKEEPER_HOST}
+          - ${ZOOKEEPER_0_HOST}
 
-  kafka-broker:
-    image: confluentinc/cp-server:6.1.0
+  kafka-broker-0:
+    image: confluentinc/cp-kafka:6.1.0
     depends_on:
-      - zookeeper
+      - zookeeper-0
     environment:
       <<: *kafka-broker-env
     networks:
       default:
         aliases:
-          - ${KAFKA_BROKER_HOST}
+          - ${KAFKA_BROKER_0_HOST}
 
   sqs:
     image: localstack/localstack:0.11.5
@@ -628,7 +633,7 @@ services:
         wait-for-it ${DYNAMODB_HOST}:${DYNAMODB_PORT} --timeout=$$TIMEOUT &&
         wait-for-it ${DGRAPH_HOST}:${DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT} --timeout=$$TIMEOUT &&
         wait-for-it ${SECRETSMANAGER_HOST}:${SECRETSMANAGER_PORT} --timeout=$$TIMEOUT &&
-        wait-for-it ${KAFKA_BROKER_HOST}:${KAFKA_BROKER_PORT} --timeout=$$TIMEOUT &&
+        wait-for-it ${KAFKA_BROKER_0_HOST}:${KAFKA_BROKER_PORT} --timeout=$$TIMEOUT &&
         . venv/bin/activate &&
         python /home/grapl/grapl_local_provision/provision_local_identity_table.py &&
         python /home/grapl/grapl_local_provision/grapl_provision.py &&
@@ -642,6 +647,9 @@ services:
       GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-INFO}"
       <<: *s3-env
       <<: *sqs-env
+      KAFKA_BROKER_0_HOST: ${KAFKA_BROKER_0_HOST}
+      <<: *identified-predicates-topics-env
+      <<: *merged-predicates-topics-env
     tty: true
     depends_on:
       - dgraph
@@ -649,6 +657,8 @@ services:
       - s3
       - secretsmanager
       - sqs
+      - zookeeper-0
+      - kafka-broker-0
 
 networks:
   default:
