--- a/local-grapl.env
+++ b/local-grapl.env
@@ -67,8 +67,8 @@ DGRAPH_HOST=dgraph.grapl.test
 DYNAMODB_HOST=dynamodb.${AWS_REGION}.amazonaws.com
 GRAPL_API_HOST=api.grapl.test
 REDIS_HOST=redis.grapl.test
-ZOOKEEPER_HOST=zookeeper
-KAFKA_BROKER_HOST=kafka-broker
+ZOOKEEPER_0_HOST=zookeeper-0
+KAFKA_BROKER_0_HOST=kafka-broker-0
 S3_HOST=s3.${AWS_REGION}.amazonaws.com
 SECRETSMANAGER_HOST=secretsmanager.${AWS_REGION}.amazonaws.com
 SQS_HOST=sqs.${AWS_REGION}.amazonaws.com
@@ -101,6 +101,15 @@ GRAPL_LOG_LEVEL=DEBUG
 PYTHONUNBUFFERED=1
 RUST_BACKTRACE=1
 RUST_LOG=ERROR
+
+# Kafka topics
+########################################################################
+IDENTIFIED_PREDICATES_TOPIC="identified_predicates"
+IDENTIFIED_PREDICATES_RETRY_TOPIC="identified_predicates_retry"
+IDENTIFIED_PREDICATES_FAILED_TOPIC="identified_predicates_failed"
+MERGED_PREDICATES_TOPIC="merged_predicates"
+MERGED_PREDICATES_RETRY_TOPIC="merged_predicates_retry"
+MERGED_PREDICATES_FAILED_TOPIC="merged_predicates_failed"
 
 # Miscellaneous
 ########################################################################
