Extract hard-coded environment information out of code
Several instances of local Grapl-related environment configuration
were hardcoded into various places in the code, making it more
difficult to refactor our test environments.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/js/graphql_endpoint/Dockerfile
+++ b/src/js/graphql_endpoint/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update && apt-get -y install --no-install-recommends \
         libffi-dev \
         libssl-dev \
         python3 \
+        wait-for-it \
         zip
 
 RUN adduser \
@@ -34,8 +35,12 @@ FROM graphql-endpoint-build AS graphql-endpoint-zip
 RUN cd lambda && \
     zip -q9r /home/grapl/lambda.zip ./
 
-# deploy
+# deploy... this is only used in Local Grapl at the moment
 FROM node:12.18-buster-slim AS graphql-endpoint-deploy
+
+# Only really needed for Local Grapl
+RUN apt-get update && apt-get -y install --no-install-recommends \
+    wait-for-it
 
 RUN adduser \
         --disabled-password \
