--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ x-common-variables:
   dgraph-env: &dgraph-env
     MG_ALPHAS: ${MG_ALPHAS}
   dynamodb-env: &dynamodb-env
-    DYNAMODB_ACCESS_KEY_ID: "dummy_cred_aws_access_key_id"
-    DYNAMODB_ACCESS_KEY_SECRET: "dummy_cred_aws_secret_access_key"
+    DYNAMODB_ACCESS_KEY_ID: ${DYNAMODB_ACCESS_KEY_ID}
+    DYNAMODB_ACCESS_KEY_SECRET: ${DYNAMODB_ACCESS_KEY_SECRET}
     DYNAMODB_ENDPOINT: ${DYNAMODB_ENDPOINT}
   # TODO: Ensure these are matched with what's in provision_local_identity_table.py
   dynamodb-mapping-tables: &dynamodb-mapping-tables
@@ -32,13 +32,17 @@ x-common-variables:
   log-level: &log-level
     GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-ERROR}"
     RUST_LOG: "${RUST_LOG:-ERROR}"
+  secretsmanager-env: &secretsmanager-env
+    SECRETSMANAGER_ACCESS_KEY_ID: ${SECRETSMANAGER_ACCESS_KEY_ID}
+    SECRETSMANAGER_ACCESS_KEY_SECRET: ${SECRETSMANAGER_ACCESS_KEY_SECRET}
+    SECRETSMANAGER_ENDPOINT: "http://${SECRETSMANAGER_HOST}:${SECRETSMANAGER_PORT}"
   s3-env: &s3-env
-    S3_ACCESS_KEY_ID: "minioadmin"
-    S3_ACCESS_KEY_SECRET: "minioadmin"
+    S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
+    S3_ACCESS_KEY_SECRET: ${S3_ACCESS_KEY_SECRET}
     S3_ENDPOINT: ${S3_ENDPOINT}
   sqs-env: &sqs-env
-    SQS_ACCESS_KEY_ID: "dummy_cred_aws_access_key_id"
-    SQS_ACCESS_KEY_SECRET: "dummy_cred_aws_secret_access_key"
+    SQS_ACCESS_KEY_ID: ${SQS_ACCESS_KEY_ID}
+    SQS_ACCESS_KEY_SECRET: ${SQS_ACCESS_KEY_SECRET}
     SQS_ENDPOINT: ${SQS_ENDPOINT}
 
 services:
@@ -119,9 +123,9 @@ services:
     image: minio/minio
     command: server /data
     environment:
-      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_ACCESS_KEY=${S3_ACCESS_KEY_ID}
       - MINIO_REGION_NAME=${AWS_REGION}
-      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_SECRET_KEY=${S3_ACCESS_KEY_SECRET}
     ports:
       - 127.0.0.1:${S3_PORT}:${S3_PORT}
     networks:
@@ -336,6 +340,8 @@ services:
       # TODO: Once we remove IS_LOCAL, this service will need to depend on s3 and be configured appropriately
       IS_LOCAL: "True"
       UX_BUCKET_NAME: "${BUCKET_PREFIX}-engagement-ux-bucket"
+      <<: *aws-region
+      <<: *s3-env
     depends_on:
       - grapl-engagement-view-uploader
     tty: true
@@ -381,6 +387,7 @@ services:
       <<: *dynamodb-env
       IS_LOCAL: "True"
       <<: *log-level
+      <<: *secretsmanager-env
       USER_AUTH_TABLE: "${BUCKET_PREFIX}-user_auth_table"
       UX_BUCKET_URL: "localhost:3000" # TODO: Port??
     depends_on:
@@ -393,6 +400,7 @@ services:
     image: grapl/grapl-model-plugin-deployer:${TAG:-latest}
     command: |
       /bin/sh -c '
+        wait-for-it grapl-provision:${WAIT_PORT} --timeout=60 &&
         . venv/bin/activate &&
         cd /home/grapl/app &&
         chalice local \
@@ -407,6 +415,7 @@ services:
       IS_LOCAL: "True"
       <<: *log-level
       <<: *s3-env
+      <<: *secretsmanager-env
       UX_BUCKET_URL: "localhost"
     tty: true
     depends_on:
@@ -469,19 +478,29 @@ services:
         ./upload_local.sh &&
         python -m http.server ${WAIT_PORT}  # wait-for-it
       "
+    environment:
+      <<: *aws-region
+      <<: *s3-env
     depends_on:
       - grapl-provision
+      - s3
 
   grapl-graphql-endpoint:
     image: grapl/grapl-graphql-endpoint:${TAG:-latest}
-    command: yarn start server
+    command: bash -c "
+      wait-for-it grapl-provision:${WAIT_PORT} --timeout=180 &&
+      yarn start server"
     environment:
+      <<: *aws-region
       <<: *dgraph-env
       IS_LOCAL: "True"
       JWT_SECRET_ID: "JWT_SECRET_ID"
       PORT: ${GRAPL_GRAPHQL_PORT}
+      <<: *secretsmanager-env
     depends_on:
       - dgraph
+      - grapl-provision
+      - secretsmanager
     ports:
       - 127.0.0.1:${GRAPL_GRAPHQL_PORT}:${GRAPL_GRAPHQL_PORT}
     networks:
@@ -523,6 +542,7 @@ services:
       <<: *aws-region
       <<: *dgraph-env
       <<: *dynamodb-env
+      <<: *secretsmanager-env
       GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-INFO}"
       <<: *s3-env
       <<: *sqs-env
