--- a/local-grapl.env
+++ b/local-grapl.env
@@ -83,6 +83,20 @@ REDIS_ENDPOINT=http://${REDIS_HOST}:${REDIS_PORT}
 S3_ENDPOINT=http://${S3_HOST}:${S3_PORT}
 SQS_ENDPOINT=http://${SQS_HOST}:${SQS_PORT}
 
+# Credentials
+########################################################################
+FAKE_AWS_ACCESS_KEY_ID="THIS_IS_A_FAKE_AWS_ACCESS_KEY_ID"
+FAKE_AWS_SECRET_ACCESS_KEY="THIS_IS_A_FAKE_AWS_SECRET_ACCESS_KEY"
+
+DYNAMODB_ACCESS_KEY_ID="${FAKE_AWS_ACCESS_KEY_ID}"
+DYNAMODB_ACCESS_KEY_SECRET="${FAKE_AWS_SECRET_ACCESS_KEY}"
+SECRETSMANAGER_ACCESS_KEY_ID="${FAKE_AWS_ACCESS_KEY_ID}"
+SECRETSMANAGER_ACCESS_KEY_SECRET="${FAKE_AWS_SECRET_ACCESS_KEY}"
+SQS_ACCESS_KEY_ID="${FAKE_AWS_ACCESS_KEY_ID}"
+SQS_ACCESS_KEY_SECRET="${FAKE_AWS_SECRET_ACCESS_KEY}"
+S3_ACCESS_KEY_ID="${FAKE_AWS_ACCESS_KEY_ID}"
+S3_ACCESS_KEY_SECRET="${FAKE_AWS_SECRET_ACCESS_KEY}"
+
 # Logging
 ########################################################################
 GRAPL_LOG_LEVEL=DEBUG
