added ports to fix broken functionality locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,10 @@ services:
     tty: false
     image: dgraph/standalone:v20.07.1
     ports:
+      # required to access the RATEL interface for dgraph
       - ${DGRAPH_RATEL_HTTP_EXTERNAL_PUBLIC_PORT}:${DGRAPH_RATEL_HTTP_EXTERNAL_PUBLIC_PORT}
+      # required for RATEL interface to operate properly
+      - ${DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT}:${DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT}
     logging:
       driver: none
     volumes:
@@ -87,6 +90,9 @@ services:
       - HOSTNAME_EXTERNAL=${SQS_HOST}
       - IMAGE_NAME=localstack/localstack:0.11.5
       - SERVICES=sqs:${SQS_PORT}
+    ports:
+      # Used to insert data in local grapl via upload-*.py
+      - ${SQS_PORT}:${SQS_PORT}
     networks:
       default:
         aliases:
